:art: Fix spacing in volumes

--- a/src/styles/views/_volumes.scss
+++ b/src/styles/views/_volumes.scss
@@ -54,9 +54,11 @@
 
     &__volume {
         display: flex;
+        flex-wrap: wrap;
         align-items: flex-start;
         justify-content: space-between;
         line-height: 1.6;
+        margin-top: -2em;
 
         li:not(:first-of-type) { margin-top: 2em; }
 
@@ -77,11 +79,12 @@
 
 
     &__section {
+        width: 49%;
+        margin-top: 2em;
+
         > h3 { margin-top: 0; }
 
-        &:first-child {
-            margin-right: 6em;
-        }
+        &:nth-of-type(2n) { margin-left: 2%; }
 
         @include media($on-mobile) {
             &:first-child {
